--- a/app/views/fitbit_oauth_connections/error.html.erb
+++ b/app/views/fitbit_oauth_connections/error.html.erb
@@ -1,5 +1,5 @@
 <h1>An error occurred</h1>
 
-<%= link_to "Try connecting your Fitbit account again", new_fitbit_oauth_connection_path %>
+<%= link_to "Try connecting your Fitbit account again", new_fitbit_oauth_connection_path, class: 'button' %>
 
 <%= debug @errors %>
