Group by timezone

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,11 @@ table {
     padding: 0.5em;
   }
 
+  .timezone {
+    background: #f9f9f9;
+    font-weight: bold;
+  }
+
   img {
     height: 50px;
     width: 50px;
