--- a/app/views/fitbit_users/index.html.erb
+++ b/app/views/fitbit_users/index.html.erb
@@ -1,27 +1,36 @@
 <table>
   <tr>
-    <th>Person</th>
+    <th colspan="2"></th>
     <th>Average daily steps</th>
     <th>Monthly steps</th>
     <th>Lifetime steps</th>
   </tr>
-  <% @fitbit_users.each do |user| %>
+  <% @fitbit_users.group_by(&:timezone).each do |timezone, users| %>
     <tr>
-      <td>
-        <%= link_to user do %>
-          <%= image_tag user.avatars['avatar'] if user.avatars['avatar'].present? %>
-          <%= user.display_name %>
-        <% end %>
-      </td>
-      <td>
-        <%= number_with_delimiter user.readings.last.average_steps %>
-      </td>
-      <td>
-        <%= number_with_delimiter user.readings.last.monthly_steps %>
-      </td>
-      <td>
-        <%= number_with_delimiter user.readings.last.lifetime_steps %>
-      </td>
+      <td colspan="6" class="timezone"><%= timezone %></td>
     </tr>
+
+    <% users.each.with_index do |user, rank| %>
+      <tr>
+        <td class="rank">
+          #<%= rank + 1 %>
+        </td>
+        <td>
+          <%= link_to user do %>
+            <%= image_tag user.avatars['avatar'] if user.avatars['avatar'].present? %>
+            <%= truncate user.display_name %>
+          <% end %>
+        </td>
+        <td>
+          <%= number_with_delimiter user.readings.last.average_steps %>
+        </td>
+        <td>
+          <%= number_with_delimiter user.readings.last.monthly_steps %>
+        </td>
+        <td>
+          <%= number_with_delimiter user.readings.last.lifetime_steps %>
+        </td>
+      </tr>
+    <% end %>
   <% end %>
 </table>
